removed extra section break from notebooks, travis_dev

--- a/examples/About.ipynb
+++ b/examples/About.ipynb
@@ -38,20 +38,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### About the Ficklin Lab\n",
     "\n",
     "The Ficklin Lab in the Dept. of Horticulture at Washington State University is a computational dry lab dedicated to the creation of software tools, computational approaches and systems-level models that address basic and applied hypothesis at the molecular-level of agricultural systems.\n",
     "\n",
     "[Ficklin Laboratory](http://ficklinlab.cahnrs.wsu.edu/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
    ]
   }
  ],
