--- a/examples/Installation.ipynb
+++ b/examples/Installation.ipynb
@@ -51,14 +51,7 @@
     "```\n",
     "\n",
     "Both of the above commands mount the local directory to the `\"/home/jovyan/work\"` within the docker image.\n",
-    "(\"jovyan\" is the default user name within the jupyter docker stack container.)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
+    "(\"jovyan\" is the default user name within the jupyter docker stack container.)\n"
    ]
   }
  ],
