--- a/examples/how_to_galleries/R_integration_guides/Access_netcdf_from_R.ipynb
+++ b/examples/how_to_galleries/R_integration_guides/Access_netcdf_from_R.ipynb
@@ -80,9 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See the [netcdf4 R package](https://cran.r-project.org/web/packages/ncdf4/index.html) for using netcdf in R.\n",
-    "\n",
-    "---"
+    "See the [netcdf4 R package](https://cran.r-project.org/web/packages/ncdf4/index.html) for using netcdf in R.\n"
    ]
   }
  ],
@@ -99,6 +97,15 @@
    "name": "R",
    "pygments_lexer": "r",
    "version": "3.6.2"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
