--- a/examples/how_to_galleries/R_integration_guides/DESeq2_GeneSets.ipynb
+++ b/examples/how_to_galleries/R_integration_guides/DESeq2_GeneSets.ipynb
@@ -747,7 +747,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -762,13 +766,6 @@
    ],
    "source": [
     "deseq2_treatment.save_as_netcdf(DEG_COLL_PATH)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
    ]
   }
  ],
@@ -793,10 +790,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
