--- a/examples/plot_gallery/GEM_Rasters.ipynb
+++ b/examples/plot_gallery/GEM_Rasters.ipynb
@@ -2528,7 +2528,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2642,13 +2646,6 @@
     "gsf.plots.gem.RasterGEM(gsc, selected_gene_sets=[\"Boruta_Genotype\"], annotation_variables=[\"Genotype\"],\n",
     "                        count_transform=np.log2, count_mask=\"masked\").opts(width=500, height=300)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
   }
  ],
  "metadata": {
@@ -2672,10 +2669,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
