--- a/examples/plot_gallery/Genewise_Scatter_and_Distributions.ipynb
+++ b/examples/plot_gallery/Genewise_Scatter_and_Distributions.ipynb
@@ -2603,19 +2603,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "```python\n",
     "hv.save(my_plot.options(toolbar=None),  # This sometimes does not remove the toolbar.\n",
     "        \"datashaded_osativa_mean_vs_var.png\")\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
    ]
   }
  ],
@@ -2640,10 +2637,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
