--- a/examples/how_to_galleries/core_guides/AnnotatedGEM_from_pandas.ipynb
+++ b/examples/how_to_galleries/core_guides/AnnotatedGEM_from_pandas.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -67,20 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/home/tyler/GSForge_demo_data')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "OSF_PATH = Path(environ.get(\"GSFORGE_DEMO_DATA\", default=\"~/GSForge_demo_data\")).expanduser()\n",
     "OSF_PATH"
@@ -95,94 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[PosixPath('/home/tyler/GSForge_demo_data/osfstorage'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/srx_sample_annots.txt'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/DEG_gene_sets'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/rice.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/all.gff3'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/rice_heat_drought.GEM.raw.txt'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/TPC2016-00158-LSBR2_Supplemental_File_1.csv'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/osativa.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/TPC2016-00158-LSBR2_Supplemental_File_5.txt'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/DEG_gene_sets/deseq2_treatment.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Boruta_Genotype.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Boruta_Subspecies.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Boruta_Treatment.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/019524_b48286.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/b8df5c_fcadb6.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/921936_8c7f65.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/921936_7717b7.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/4f9452_26da90.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/f79407_a3f0bf.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/26b197_c7df13.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/9fda5b_009ca3.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/3a6380_737034.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/2e4ade_bf86e6.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/488d45_7dbc79.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/8fa5fc_ad023d.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/e90ecb_ac8755.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/21a38c_c68f41.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/cfa346_946b08.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/75bfe3_5b34f5.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/cfa346_ae0e6c.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/1ec403_b17615.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/a6130e_63b28c.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/f962d6_3da9fb.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/eb6a41_a0e01c.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/8fa5fc_04e12e.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/019524_babd6a.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/488d45_fd0554.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/a45d98_14d7bc.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/36b179_f8be07.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/a45d98_8a0b2f.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/749d0e_498d3d.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/891c83_4b02e6.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/3a6380_38175b.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/0a0991_556f7b.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/b8df5c_4d728d.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/dc6a48_b3abce.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/4d726f_5150af.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/c3e5ee_666b04.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/1ec403_a15667.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/75bfe3_80c26f.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/0a0991_4c7dd4.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/d75652_e7d2d3.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/c3e5ee_14d3cd.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/749d0e_e0cb46.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/a6130e_720599.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/2e4ade_61218e.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/21a38c_bbb811.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/d38fb9_96caf8.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/644cfd_3c8807.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/4d726f_b548d8.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/f962d6_d77341.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/4f9452_d04106.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/e90ecb_599a80.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/644cfd_4554ce.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/891c83_2c969d.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/9fda5b_806573.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/d75652_5babcd.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/f79407_d52253.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/dc6a48_a65673.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/26b197_1a49d0.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/eb6a41_ff5be8.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/d38fb9_de32a5.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/36b179_451cf8.nc')]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list(OSF_PATH.glob(\"**/*\"))"
    ]
@@ -280,8 +184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.2 s, sys: 330 ms, total: 2.53 s\n",
-      "Wall time: 2.68 s\n"
+      "CPU times: user 2.1 s, sys: 293 ms, total: 2.39 s\n",
+      "Wall time: 2.39 s\n"
      ]
     }
    ],
@@ -341,7 +245,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>LOC_Os06g05820</td>\n",
+       "      <th>LOC_Os06g05820</th>\n",
        "      <td>20</td>\n",
        "      <td>2</td>\n",
        "      <td>22</td>\n",
@@ -365,7 +269,7 @@
        "      <td>21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>LOC_Os10g27460</td>\n",
+       "      <th>LOC_Os10g27460</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -389,7 +293,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>LOC_Os02g35980</td>\n",
+       "      <th>LOC_Os02g35980</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -413,7 +317,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>LOC_Os09g23260</td>\n",
+       "      <th>LOC_Os09g23260</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -437,7 +341,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>LOC_Os01g41670</td>\n",
+       "      <th>LOC_Os01g41670</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -529,8 +433,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.65 ms, sys: 0 ns, total: 4.65 ms\n",
-      "Wall time: 4.62 ms\n"
+      "CPU times: user 7.25 ms, sys: 0 ns, total: 7.25 ms\n",
+      "Wall time: 6.25 ms\n"
      ]
     }
    ],
@@ -584,7 +488,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>SRX1423934</td>\n",
+       "      <th>SRX1423934</th>\n",
        "      <td>SRR2931040</td>\n",
        "      <td>CONTROL</td>\n",
        "      <td>15</td>\n",
@@ -593,7 +497,7 @@
        "      <td>Japonica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>SRX1423935</td>\n",
+       "      <th>SRX1423935</th>\n",
        "      <td>SRR2931041</td>\n",
        "      <td>CONTROL</td>\n",
        "      <td>15</td>\n",
@@ -602,7 +506,7 @@
        "      <td>Japonica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>SRX1423936</td>\n",
+       "      <th>SRX1423936</th>\n",
        "      <td>SRR2931042</td>\n",
        "      <td>CONTROL</td>\n",
        "      <td>30</td>\n",
@@ -611,7 +515,7 @@
        "      <td>Japonica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>SRX1423937</td>\n",
+       "      <th>SRX1423937</th>\n",
        "      <td>SRR2931043</td>\n",
        "      <td>CONTROL</td>\n",
        "      <td>30</td>\n",
@@ -620,7 +524,7 @@
        "      <td>Japonica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>SRX1423938</td>\n",
+       "      <th>SRX1423938</th>\n",
        "      <td>SRR2931044</td>\n",
        "      <td>CONTROL</td>\n",
        "      <td>45</td>\n",
@@ -722,6 +626,21 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<pre>&lt;xarray.Dataset&gt;\n",
+       "Dimensions:     (Gene: 55986, Sample: 475)\n",
+       "Coordinates:\n",
+       "  * Sample      (Sample) object &#x27;SRX1423934&#x27; &#x27;SRX1423935&#x27; ... &#x27;SRX1424408&#x27;\n",
+       "  * Gene        (Gene) object &#x27;LOC_Os06g05820&#x27; ... &#x27;LOC_Os07g03418&#x27;\n",
+       "Data variables:\n",
+       "    SampleSRR   (Sample) object &#x27;SRR2931040&#x27; &#x27;SRR2931041&#x27; ... &#x27;SRR2931514&#x27;\n",
+       "    Treatment   (Sample) object &#x27;CONTROL&#x27; &#x27;CONTROL&#x27; ... &#x27;RECOV_DROUGHT&#x27;\n",
+       "    Time        (Sample) int64 15 15 30 30 45 45 60 ... 240 240 270 270 300 300\n",
+       "    Tissue      (Sample) object &#x27;leaf&#x27; &#x27;leaf&#x27; &#x27;leaf&#x27; ... &#x27;leaf&#x27; &#x27;leaf&#x27; &#x27;leaf&#x27;\n",
+       "    Genotype    (Sample) object &#x27;AZ&#x27; &#x27;AZ&#x27; &#x27;AZ&#x27; &#x27;AZ&#x27; &#x27;AZ&#x27; ... &#x27;TD&#x27; &#x27;TD&#x27; &#x27;TD&#x27; &#x27;TD&#x27;\n",
+       "    Subspecies  (Sample) object &#x27;Japonica&#x27; &#x27;Japonica&#x27; ... &#x27;Indica&#x27; &#x27;Indica&#x27;\n",
+       "    counts      (Sample, Gene) int64 20 0 0 0 0 0 200 ... 19 0 52 335 0 666 0</pre>"
+      ],
       "text/plain": [
        "<xarray.Dataset>\n",
        "Dimensions:     (Gene: 55986, Sample: 475)\n",
@@ -793,7 +712,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>Chr1</td>\n",
        "      <td>MSU_osa1r7</td>\n",
        "      <td>gene</td>\n",
@@ -805,7 +724,7 @@
        "      <td>ID=LOC_Os01g01010;Name=LOC_Os01g01010;Note=TBC...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>Chr1</td>\n",
        "      <td>MSU_osa1r7</td>\n",
        "      <td>mRNA</td>\n",
@@ -894,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -903,13 +822,13 @@
        "PosixPath('/home/tyler/GSForge_demo_data/osfstorage/rice.nc')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "agem.save(AGEM_PATH)"
+    "# agem.save(AGEM_PATH)"
    ]
   },
   {
@@ -925,20 +844,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<GSForge.AnnotatedGEM>\n",
-       "Name: AnnotatedGEM00089\n",
+       "Name: AnnotatedGEM00090\n",
        "Selected GEM Variable: 'counts'\n",
        "    Gene   55986\n",
        "    Sample 475"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,20 +873,13 @@
     ")\n",
     "agem"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py38",
    "language": "python",
-   "name": "python3"
+   "name": "py38"
   },
   "language_info": {
    "codemirror_mode": {
@@ -979,7 +891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.1"
   },
   "pycharm": {
    "stem_cell": {
