updates to travis environment, travis_dev

--- a/examples/how_to_galleries/workflow_guide/Using_Workflows.ipynb
+++ b/examples/how_to_galleries/workflow_guide/Using_Workflows.ipynb
@@ -1,6 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.22.1'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sklearn.__version__"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1425,7 +1454,20 @@
       "text/html": [
        "\n",
        "<link rel=\"stylesheet\" href=\"https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css\">\n",
-       "<style>div.hololayout {\n",
+       "<style>div.bk-hbox {\n",
+       "    display: flex;\n",
+       "    justify-content: center;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-plot {\n",
+       "    padding: 8px;\n",
+       "}\n",
+       "\n",
+       "div.bk-hbox div.bk-data-table {\n",
+       "    padding: 20px;\n",
+       "}\n",
+       "\n",
+       "div.hololayout {\n",
        "  display: flex;\n",
        "  align-items: center;\n",
        "  margin: 0;\n",
@@ -1517,19 +1559,6 @@
        ".noUi-target {\n",
        "  margin-left: 0.5em;\n",
        "  margin-right: 0.5em;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox {\n",
-       "    display: flex;\n",
-       "    justify-content: center;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-plot {\n",
-       "    padding: 8px;\n",
-       "}\n",
-       "\n",
-       "div.bk-hbox div.bk-data-table {\n",
-       "    padding: 20px;\n",
        "}\n",
        "</style>\n",
        "\n",
@@ -2700,7 +2729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2715,14 +2744,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<GSForge.GeneSetCollection>\n",
-       "GeneSetCollection01562\n",
+       "GeneSetCollection01381\n",
        "GeneSets (60 total): Support Count\n",
        "    36b179_451cf8: 2414\n",
        "    3a6380_737034: 2393\n",
@@ -2736,7 +2765,7 @@
        "    f962d6_d77341: 1532"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2748,7 +2777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2764,7 +2793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2784,48 +2813,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'Treatment': defaultdict(list,\n",
-       "             {'e90ecb': ['e90ecb'],\n",
-       "              '3a6380': ['3a6380'],\n",
-       "              '36b179': ['36b179'],\n",
-       "              'a45d98': ['a45d98'],\n",
-       "              '26b197': ['26b197'],\n",
-       "              '644cfd': ['644cfd'],\n",
-       "              '21a38c': ['21a38c'],\n",
-       "              'eb6a41': ['eb6a41'],\n",
-       "              'f79407': ['f79407'],\n",
-       "              'f962d6': ['f962d6']}),\n",
+       "             {'e90ecb': ['e90ecb_ac8755', 'e90ecb_599a80'],\n",
+       "              'f79407': ['f79407_a3f0bf', 'f79407_d52253'],\n",
+       "              '21a38c': ['21a38c_c68f41', '21a38c_bbb811'],\n",
+       "              'f962d6': ['f962d6_3da9fb', 'f962d6_d77341'],\n",
+       "              'eb6a41': ['eb6a41_a0e01c', 'eb6a41_ff5be8'],\n",
+       "              '644cfd': ['644cfd_3c8807', '644cfd_4554ce'],\n",
+       "              'a45d98': ['a45d98_14d7bc', 'a45d98_8a0b2f'],\n",
+       "              '3a6380': ['3a6380_737034', '3a6380_38175b'],\n",
+       "              '26b197': ['26b197_c7df13', '26b197_1a49d0'],\n",
+       "              '36b179': ['36b179_f8be07', '36b179_451cf8']}),\n",
        " 'Genotype': defaultdict(list,\n",
-       "             {'8fa5fc': ['8fa5fc'],\n",
-       "              'b8df5c': ['b8df5c'],\n",
-       "              '9fda5b': ['9fda5b'],\n",
-       "              '488d45': ['488d45'],\n",
-       "              'd38fb9': ['d38fb9'],\n",
-       "              '75bfe3': ['75bfe3'],\n",
-       "              '4d726f': ['4d726f'],\n",
-       "              'a6130e': ['a6130e'],\n",
-       "              '891c83': ['891c83'],\n",
-       "              'dc6a48': ['dc6a48']}),\n",
+       "             {'75bfe3': ['75bfe3_5b34f5', '75bfe3_80c26f'],\n",
+       "              '8fa5fc': ['8fa5fc_ad023d', '8fa5fc_04e12e'],\n",
+       "              'a6130e': ['a6130e_63b28c', 'a6130e_720599'],\n",
+       "              '891c83': ['891c83_4b02e6', '891c83_2c969d'],\n",
+       "              '488d45': ['488d45_7dbc79', '488d45_fd0554'],\n",
+       "              'd38fb9': ['d38fb9_96caf8', 'd38fb9_de32a5'],\n",
+       "              'b8df5c': ['b8df5c_fcadb6', 'b8df5c_4d728d'],\n",
+       "              '4d726f': ['4d726f_5150af', '4d726f_b548d8'],\n",
+       "              'dc6a48': ['dc6a48_b3abce', 'dc6a48_a65673'],\n",
+       "              '9fda5b': ['9fda5b_009ca3', '9fda5b_806573']}),\n",
        " 'Subspecies': defaultdict(list,\n",
-       "             {'921936': ['921936'],\n",
-       "              '1ec403': ['1ec403'],\n",
-       "              'c3e5ee': ['c3e5ee'],\n",
-       "              '749d0e': ['749d0e'],\n",
-       "              'd75652': ['d75652'],\n",
-       "              '4f9452': ['4f9452'],\n",
-       "              '019524': ['019524'],\n",
-       "              '2e4ade': ['2e4ade'],\n",
-       "              'cfa346': ['cfa346'],\n",
-       "              '0a0991': ['0a0991']})}"
+       "             {'d75652': ['d75652_e7d2d3', 'd75652_5babcd'],\n",
+       "              '4f9452': ['4f9452_26da90', '4f9452_d04106'],\n",
+       "              '2e4ade': ['2e4ade_bf86e6', '2e4ade_61218e'],\n",
+       "              '1ec403': ['1ec403_b17615', '1ec403_a15667'],\n",
+       "              'c3e5ee': ['c3e5ee_666b04', 'c3e5ee_14d3cd'],\n",
+       "              '0a0991': ['0a0991_556f7b', '0a0991_4c7dd4'],\n",
+       "              '019524': ['019524_b48286', '019524_babd6a'],\n",
+       "              '921936': ['921936_8c7f65', '921936_7717b7'],\n",
+       "              '749d0e': ['749d0e_498d3d', '749d0e_e0cb46'],\n",
+       "              'cfa346': ['cfa346_946b08', 'cfa346_ae0e6c']})}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2836,9 +2865,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataArray' object has no attribute 'gene_index'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-144017b5cb9b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0margument_hash\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeys\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcoll\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mgene_sets\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mworkflow_collection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgene_sets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mcombined_genesets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0margument_hash\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgsf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGeneSet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_GeneSets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mgene_sets\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0magem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgene_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0margument_hash\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mattrs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgene_sets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mattrs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mcollections\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgsf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGeneSetCollection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgem\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0magem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgene_sets\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcombined_genesets\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/github/gsforge/GSForge/models/_GeneSet.py\u001b[0m in \u001b[0;36mfrom_GeneSets\u001b[0;34m(cls, mode, attrs, *gene_sets, **params)\u001b[0m\n\u001b[1;32m    215\u001b[0m         \u001b[0mGeneSet\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mA\u001b[0m \u001b[0mnew\u001b[0m \u001b[0mGeneSet\u001b[0m \u001b[0mbuilt\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mgiven\u001b[0m \u001b[0mGeneSets\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdescribed\u001b[0m \u001b[0mby\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    216\u001b[0m         \"\"\"\n\u001b[0;32m--> 217\u001b[0;31m         params = cls._parse_GeneSets(*gene_sets,\n\u001b[0m\u001b[1;32m    218\u001b[0m                                      \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    219\u001b[0m                                      \u001b[0mattrs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mattrs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/github/gsforge/GSForge/models/_GeneSet.py\u001b[0m in \u001b[0;36m_parse_GeneSets\u001b[0;34m(mode, attrs, *gene_sets, **params)\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m         \u001b[0;31m# Construct the minimal 'complete' gene index for the new GeneSet.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 113\u001b[0;31m         \u001b[0mgene_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunctools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduce\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munion1d\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mgs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgene_index\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mgs\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgene_sets\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    114\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m         \u001b[0;31m# Construct the new support array based on the mode selected.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/github/gsforge/GSForge/models/_GeneSet.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m         \u001b[0;31m# Construct the minimal 'complete' gene index for the new GeneSet.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 113\u001b[0;31m         \u001b[0mgene_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfunctools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreduce\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munion1d\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mgs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgene_index\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mgs\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgene_sets\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    114\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m         \u001b[0;31m# Construct the new support array based on the mode selected.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/py38/lib/python3.8/site-packages/xarray/core/common.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    230\u001b[0m                 \u001b[0;32mwith\u001b[0m \u001b[0msuppress\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mKeyError\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    231\u001b[0m                     \u001b[0;32mreturn\u001b[0m \u001b[0msource\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 232\u001b[0;31m         raise AttributeError(\n\u001b[0m\u001b[1;32m    233\u001b[0m             \u001b[0;34m\"{!r} object has no attribute {!r}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    234\u001b[0m         )\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DataArray' object has no attribute 'gene_index'"
+     ]
+    }
+   ],
    "source": [
     "collections = []\n",
     "\n",
@@ -2849,7 +2894,7 @@
     "\n",
     "    for argument_hash, keys in coll.items():\n",
     "        gene_sets = [workflow_collection.gene_sets[key] for key in keys]\n",
-    "        combined_genesets[argument_hash] = gsf.GeneSet.from_GeneSets(gene_sets, agem.gene_index, name=argument_hash, attrs=gene_sets[0].data.attrs)\n",
+    "        combined_genesets[argument_hash] = gsf.GeneSet.from_GeneSets(*gene_sets, agem.gene_index, name=argument_hash, attrs=gene_sets[0].data.attrs)\n",
     "\n",
     "    collections.append(gsf.GeneSetCollection(gem=agem, gene_sets=combined_genesets, name=label))\n",
     "    \n",
@@ -2858,122 +2903,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<GSForge.GeneSetCollection>\n",
-       "Treatment\n",
-       "GeneSets (10 total): Support Count\n",
-       "    3a6380: 2577\n",
-       "    36b179: 2576\n",
-       "    644cfd: 2504\n",
-       "    21a38c: 2289\n",
-       "    f962d6: 1636\n",
-       "    f79407: 1064\n",
-       "    e90ecb: 1039\n",
-       "    26b197: 965\n",
-       "    eb6a41: 876\n",
-       "    a45d98: 766"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "treatment_coll"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "OrderedDict([('boruta_model',\n",
-       "              '{\"estimator\": \"<not serializable>\", \"two_step\": true, \"verbose\": 0, \"max_iter\": 200, \"perc\": 95, \"alpha\": 0.05, \"n_estimators\": 1000, \"random_state\": null}'),\n",
-       "             ('ranking_model',\n",
-       "              '{\"bootstrap\": true, \"ccp_alpha\": 0.0, \"class_weight\": null, \"criterion\": \"gini\", \"max_depth\": 6, \"max_features\": \"auto\", \"max_leaf_nodes\": null, \"max_samples\": null, \"min_impurity_decrease\": 0.0, \"min_impurity_split\": null, \"min_samples_leaf\": 1, \"min_samples_split\": 2, \"min_weight_fraction_leaf\": 0.0, \"n_estimators\": 1000, \"n_jobs\": -1, \"oob_score\": false, \"random_state\": \"<not serializable>\", \"verbose\": 0, \"warm_start\": false}'),\n",
-       "             ('selected_count_variable', 'counts'),\n",
-       "             ('selected_annotation_variables', 'Treatment'),\n",
-       "             ('arg_hash', '3a6380')])"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "treatment_coll.gene_sets[\"3a6380\"].data.attrs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<GSForge.GeneSetCollection>\n",
-       "Genotype\n",
-       "GeneSets (10 total): Support Count\n",
-       "    75bfe3: 1139\n",
-       "    488d45: 1125\n",
-       "    a6130e: 1121\n",
-       "    891c83: 1077\n",
-       "    dc6a48: 910\n",
-       "    9fda5b: 759\n",
-       "    4d726f: 747\n",
-       "    d38fb9: 742\n",
-       "    8fa5fc: 729\n",
-       "    b8df5c: 687"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "genotype_coll"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<GSForge.GeneSetCollection>\n",
-       "Subspecies\n",
-       "GeneSets (10 total): Support Count\n",
-       "    921936: 387\n",
-       "    d75652: 384\n",
-       "    2e4ade: 382\n",
-       "    1ec403: 374\n",
-       "    749d0e: 363\n",
-       "    4f9452: 279\n",
-       "    0a0991: 276\n",
-       "    c3e5ee: 273\n",
-       "    019524: 273\n",
-       "    cfa346: 273"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "subspecies_coll"
    ]
