Added some more tests.

--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -21,12 +21,32 @@
     "    + Workflow images.\n",
     "    \n",
     "The above repositories and websites are all kept up-to-date using travis ci.\n",
-    "    \n",
     "\n",
     "### Travis CI\n",
     "\n",
     "Travis integration is setup through the `.travis.yml` file.\n",
     "\n",
+    "By default travis will only run on tagged builds, or those with \"travis_dev\" within their commit message.\n",
+    "\n",
+    "To tag a commit:\n",
+    "\n",
+    "```bash\n",
+    "git tag -a v1.4 -m \"my version 1.4\"\n",
+    "```\n",
+    "\n",
+    "Development tags are recognized by the regex: `^v(\\d+|\\.)+[a-z]+\\d*$`  \n",
+    "Examples include `v1.2rc4`, `v1.2alpha`.\n",
+    "\n",
+    "Release tags are recognized by the regex: `^v(\\d+|\\.)+[^a-z]\\d+$`  \n",
+    "Examples include `v1.2`.\n",
+    "\n",
+    "Tags are not pushed by default.\n",
+    "\n",
+    "```bash\n",
+    "git push origin <tag-name>\n",
+    "```\n",
+    "\n",
+    "See the [git documentation](https://git-scm.com/book/en/v2/Git-Basics-Tagging) for more on tags.\n",
     "\n",
     "### Generating the Documentation\n",
     "\n",
@@ -40,6 +60,21 @@
     "+ [`nbsmoke`](https://github.com/pyviz-dev/nbsmoke)\n",
     "    For basic notebook checks.\n",
     " \n",
+    " **Building the docs locally:**\n",
+    "\n",
+    " ```bash\n",
+    "nbsite_generate_modules.py GSForge -d ./doc/Reference_Manual -n GSForge\n",
+    "nbsite generate-rst --org SystemsGenetics --project-name GSForge\n",
+    "nbsite build --what=html --output=builtdocs\n",
+    "```\n",
+    "\n",
+    "Then start the server:\n",
+    "\n",
+    "```bash\n",
+    "cd builtdocs && python -m http.server\n",
+    "```\n",
+    "\n",
+    "View at (localhost:8000)[localhost:8000].\n",
     "\n",
     "**Initial setup notes:**\n",
     " \n",
@@ -93,7 +128,24 @@
     "\n",
     "### Maintaining Docker Images\n",
     "\n",
-    "The docker images used by `GSForge` are based on the [Jupyter Docker Stacks](https://jupyter-docker-stacks.readthedocs.io/en/latest/index.html).\n"
+    "The docker images used by `GSForge` are based on the [Jupyter Docker Stacks](https://jupyter-docker-stacks.readthedocs.io/en/latest/index.html).\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Developing Documentation\n",
+    "\n",
+    "> ...***if the documentation is not good enough, people will not use it.***\n",
+    "\n",
+    "When writing a piece of documentation, consider the categorical purpose:\n",
+    "\n",
+    "+ Tutorial -- learning-oriented, a introductory combination of a 'how-to' and 'explanation'.\n",
+    "+ How-to Guide -- goal-oriented.\n",
+    "+ Explanation -- understanding-oriented.\n",
+    "+ Reference -- information-oriented.\n",
+    "\n",
+    "\n",
+    "**References:**  \n",
+    "+ [Documentation, Procida](https://www.divio.com/blog/documentation/)\n"
    ]
   }
  ],
