--- a/examples/Development.ipynb
+++ b/examples/Development.ipynb
@@ -40,6 +40,8 @@
     "Release tags are recognized by the regex: `^v(\\d+|\\.)+[^a-z]\\d+$`  \n",
     "Examples include `v1.2`.\n",
     "\n",
+    "The version should be set in the `setup.py` file.\n",
+    "\n",
     "Tags are not pushed by default.\n",
     "\n",
     "```bash\n",
