--- a/examples/how_to_galleries/R_integration_guides/DESeq2_GeneSets.ipynb
+++ b/examples/how_to_galleries/R_integration_guides/DESeq2_GeneSets.ipynb
@@ -771,9 +771,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -790,10 +790,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
