minor bug fixes, travis_dev

--- a/examples/how_to_galleries/R_integration_guides/EdgeR_GeneSets.ipynb
+++ b/examples/how_to_galleries/R_integration_guides/EdgeR_GeneSets.ipynb
@@ -8,8 +8,43 @@
     }
    },
    "source": [
-    "Coming soon..."
+    "## EdgeR Input Expectations"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Providing a Design Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Providing Contrasts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
