--- a/examples/how_to_galleries/core_guides/AnnotatedGEM_from_pandas.ipynb
+++ b/examples/how_to_galleries/core_guides/AnnotatedGEM_from_pandas.ipynb
@@ -101,80 +101,7 @@
     {
      "data": {
       "text/plain": [
-       "[PosixPath('/home/tyler/GSForge_demo_data/osfstorage'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/.osfcli.config'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/srx_sample_annots.txt'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/DEG_gene_sets'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/rice.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/all.gff3'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/rice_heat_drought.GEM.raw.txt'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/osativa.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/DEG_gene_sets/deseq2_treatment.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Boruta_Genotype.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Boruta_Subspecies.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_gene_sets/Boruta_Treatment.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/019524_b48286.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/b8df5c_fcadb6.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/921936_8c7f65.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/921936_7717b7.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/4f9452_26da90.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/f79407_a3f0bf.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/26b197_c7df13.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/9fda5b_009ca3.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/3a6380_737034.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/2e4ade_bf86e6.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/488d45_7dbc79.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/8fa5fc_ad023d.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/e90ecb_ac8755.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/21a38c_c68f41.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/cfa346_946b08.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/75bfe3_5b34f5.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/cfa346_ae0e6c.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/1ec403_b17615.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/a6130e_63b28c.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/f962d6_3da9fb.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/eb6a41_a0e01c.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/8fa5fc_04e12e.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/019524_babd6a.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/488d45_fd0554.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/a45d98_14d7bc.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/36b179_f8be07.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/a45d98_8a0b2f.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/749d0e_498d3d.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/891c83_4b02e6.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/3a6380_38175b.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/0a0991_556f7b.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/b8df5c_4d728d.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/dc6a48_b3abce.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/4d726f_5150af.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/c3e5ee_666b04.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/1ec403_a15667.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/75bfe3_80c26f.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/0a0991_4c7dd4.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/d75652_e7d2d3.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/c3e5ee_14d3cd.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/749d0e_e0cb46.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/a6130e_720599.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/2e4ade_61218e.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/21a38c_bbb811.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/d38fb9_96caf8.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/644cfd_3c8807.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/4d726f_b548d8.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/f962d6_d77341.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/4f9452_d04106.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/e90ecb_599a80.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/644cfd_4554ce.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/891c83_2c969d.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/9fda5b_806573.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/d75652_5babcd.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/f79407_d52253.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/dc6a48_a65673.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/26b197_1a49d0.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/eb6a41_ff5be8.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/d38fb9_de32a5.nc'),\n",
-       " PosixPath('/home/tyler/GSForge_demo_data/osfstorage/boruta_workflow_gene_sets/36b179_451cf8.nc')]"
+       "[]"
       ]
      },
      "execution_count": 3,
@@ -972,9 +899,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py38"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -986,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.7"
   },
   "pycharm": {
    "stem_cell": {
